--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 
-table.bordered-table th, td {
+table, th, td {
   border: 1px solid silver; 
   padding: 4px;
+  border-collapse: collapse;
 }
 
 table.bordered-table {
